<resources>
    <string name="app_name">Alert System Rumah Pompa</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_form">Sign in</string>

    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="telepon">No Telepon</string>
    <string name="rumah_pompa">Rumah Pompa</string>
    <string name="edit">Edit</string>
    <string name="submit">Simpan</string>
    <string name="signup">Daftar</string>
    <string name="signin">Masuk</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_phone">This phone is invalid</string>
    <string name="error_invalid_address">This address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Password Harus Kombinasi Huruf dan Angka</string>
    <string name="lenght_incorrect_password">Password Minimal 5 Digit</string>
    <string name="error_incorrect_repassword">Password Salah</string>
    <string name="invalid_token">Token Tidak Valid</string>
    <string name="error_field_required">Wajib Diisi</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_admin_home">Administrator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_edit_admin">EditAdminActivity</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pengawas_home">PengawasHomeActivity</string>
    <string name="register">Dont have an account? Register here</string>

    <string name="role">Jabatan</string>
    <string name="title_activity_petugas_home">Petugas</string>
    <string name="ketinggian_air">Ketinggian Air (cm)</string>
    <string name="cuaca">Cuaca</string>
    <string name="threshold">Ambang Batas Tinggi Air (cm)</string>
    <string name="pop">Kemungkinan Terjadi Hujan (%)</string>
    <string name="title_activity_maps">Map</string>
    <string name="tinggisaluran">Ketinggian Sensor (cm)</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="kedalamansaluran">Kedalaman Saluran (cm)</string>
    <string name="status">Status Potensi Banjir</string>

    <string name="searchrumahpompa">Masukkan Nama Rumah Pompa</string>
    <string name="download">Unduh</string>
    <string name="catatan">Catatan</string>
    <string name="pompa">Pompa Air</string>
</resources>
