<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/activity_edit_profil"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.mardiana.alertsystemrumahpompa.EditProfilActivity">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_profil_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:drawableLeft="@drawable/ic_user2"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_profil_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_profil_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alamat"
                android:drawableLeft="@drawable/ic_action_name"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_profil_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telepon"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <!--com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spin_profil_rumahpompa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rumah_pompa"
            android:drawableLeft="@drawable/ic_rumahpompa"
            android:drawablePadding="8dp"
            app:met_floatingLabel="highlight"
            app:met_textColorHint="@color/black"
            app:met_textColor = "@color/black"
            app:met_baseColor = "@color/black"/-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_profil_rumahpompa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rumah_pompa"
                android:drawableLeft="@drawable/ic_rumahpompa"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_profil_edit"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/edit"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark2"/>
    </LinearLayout>
</ScrollView>
